--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="features">
     <div class="card glass">
       <h3>শিক্ষা</h3>
-      <p>গোবিন্দগঞ্জ সরকারি কলেজ।</p>
+      <p>গোবিন্দগঞ্জ কলেজ।</p>
     </div>
     <div class="card glass">
       <h3>আগ্রহ</h3>
