--- a/video.html
+++ b/video.html
@@ -1,17 +1,19 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Video Gallery</title>
+  <meta name="description" content="প্রাপ্তি রায় | ভিডিও গ্যালারি">
+  <title>প্রাপ্তি রায় | ভিডিও</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div id="container">
-  <nav class="nav glass">
+<body class="page page-video">
+  <div id="floating-shapes"></div>
+  
+  <nav class="nav glass" aria-label="Main navigation">
     <div class="brand">Prapti • Piu</div>
-    <ul>
+    <button class="nav-toggle" aria-controls="nav-list" aria-expanded="false" aria-label="Open menu">☰</button>
+    <ul id="nav-list" aria-hidden="false">
       <li><a class="btn pill" href="index.html">হোম</a></li>
       <li><a class="btn pill active" aria-current="page" href="video.html">ভিডিও</a></li>
       <li><a class="btn pill" href="about.html">সম্পর্কে</a></li>
@@ -19,114 +21,49 @@
       <li><a class="btn pill" href="contact.html">যোগাযোগ</a></li>
     </ul>
   </nav>
-  <header class="header">
-    <h1>🎥 My Video Gallery</h1>
-    <p>আমার প্রিয় ভিডিওগুলো এখানে সাজানো আছে</p>
-  </header>
 
   <main class="container">
+    <h1>🎥 আমার ভিডিও গ্যালারি</h1>
+    <p class="subtitle">প্রিয় মুহূর্তগুলি এখানে সংগৃহীত</p>
+    
     <section id="video-gallery" class="video-gallery" aria-live="polite">
       <!-- Video cards will be generated here by script.js -->
     </section>
   </main>
 
-  <footer class="footer">
-    <p>© 2025 Mahmudur’s Website</p>
+  <footer class="footer glass">
+    <p>❤️ • Piu</p>
   </footer>
-  </div>
-  <div id="floating-shapes"></div>
 
-  <!-- Provide a simple JSON list of videos found in `p/` for the gallery script -->
+  <a class="mobile-contact" href="contact.html" aria-label="Contact">যোগাযোগ</a>
+
+  <!-- Provide video list for the gallery -->
   <script>
-    // You can either provide string paths (old behavior) or objects with title/desc:
     window.VIDEO_FILES = [
-      { path: 'p/v1.mp4', title: 'Sunset Walk' },
-      { path: 'p/v2.mp4', title: 'College Memories' },
-      { path: 'p/v3.mp4', title: 'asolei sob shopno to ar bastob hoy na' },
-      { path: 'p/v4.mp4', title: 'kishu kotha' },
-      { path: 'p/TikTok video_1764464176616_0(MP4).mp4', title: 'Fun Reel' },
-      { path: 'p/Prapti Roy_s short video with ♬ original sound(MP4).mp4', title: 'Prapti Short' }
+      { path: 'p/v1.mp4', title: 'Video 1' },
+      { path: 'p/v2.mp4', title: 'Video 2' },
+      { path: 'p/v3.mp4', title: 'Video 3' },
+      { path: 'p/v4.mp4', title: 'Video 4' },
+      { path: 'p/TikTok video_1764464176616_0(MP4).mp4', title: 'TikTok Video' },
+      { path: 'p/Prapti Roy_s short video with ♬ original sound(MP4).mp4', title: 'Prapti Video' }
     ];
   </script>
+
   <script src="script.js"></script>
-  <!-- Inline code to initialise the gallery; script.js defines `initVideoGallery` -->
+  
+  <!-- Initialize video gallery -->
   <script>
     (function(){
       const list = window.VIDEO_FILES || [];
-      if (list.length) {
-        if (window.initVideoGallery) window.initVideoGallery(list);
+      if (list.length && window.initVideoGallery) {
+        window.initVideoGallery(list);
       } else {
-        // fallback: show a friendly message
         const g = document.getElementById('video-gallery');
-        g.innerHTML = '<p>No videos found in the `p/` folder. Add MP4s to the p/ directory and refresh.</p>';
+        if (g) {
+          g.innerHTML = '<p style="color: #fff; text-align: center; padding: 40px;">কোনো ভিডিও পাওয়া যায়নি। p/ ফোল্ডারে MP4 ফাইল যোগ করুন।</p>';
+        }
       }
     })();
   </script>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="bn">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Video Gallery</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="container">
-  <nav class="nav glass">
-    <div class="brand">Prapti • Piu</div>
-    <ul>
-      <li><a class="btn pill" href="index.html">হোম</a></li>
-      <li><a class="btn pill active" aria-current="page" href="video.html">ভিডিও</a></li>
-      <li><a class="btn pill" href="about.html">সম্পর্কে</a></li>
-      <li><a class="btn pill" href="gallery.html">গ্যালারি</a></li>
-      <li><a class="btn pill" href="contact.html">যোগাযোগ</a></li>
-    </ul>
-  </nav>
-  <header class="header">
-    <h1>🎥 My Video Gallery</h1>
-    <p>আমার প্রিয় ভিডিওগুলো এখানে সাজানো আছে</p>
-  </header>
-
-  <main class="container">
-    <section id="video-gallery" class="video-gallery" aria-live="polite">
-      <!-- Video cards will be generated here by script.js -->
-    </section>
-  </main>
-
-  <footer class="footer">
-    <p>© 2025 Mahmudur’s Website</p>
-  </footer>
-  </div>
-  <div id="floating-shapes"></div>
-
-  <!-- Provide a simple JSON list of videos found in `p/` for the gallery script -->
-  <script>
-    // You can either provide string paths (old behavior) or objects with title/desc:
-    window.VIDEO_FILES = [
-      { path: 'p/v1.mp4', title: 'Sunset Walk' },
-      { path: 'p/v2.mp4', title: 'College Memories' },
-      { path: 'p/v3.mp4', title: 'asolei sob shopno to ar bastob hoy na' },
-      { path: 'p/v4.mp4', title: 'kishu kotha' },
-      { path: 'p/TikTok video_1764464176616_0(MP4).mp4', title: 'Fun Reel' },
-      { path: 'p/Prapti Roy_s short video with ♬ original sound(MP4).mp4', title: 'Prapti Short' }
-    ];
-  </script>
-  <script src="script.js"></script>
-  <!-- Inline code to initialise the gallery; script.js defines `initVideoGallery` -->
-  <script>
-    (function(){
-      const list = window.VIDEO_FILES || [];
-      if (list.length) {
-        if (window.initVideoGallery) window.initVideoGallery(list);
-      } else {
-        // fallback: show a friendly message
-        const g = document.getElementById('video-gallery');
-        g.innerHTML = '<p>No videos found in the `p/` folder. Add MP4s to the p/ directory and refresh.</p>';
-      }
-    })();
-  </script>
-</body>
->>>>>>> 84b0020578e868ef4c6009ef4621b8072c807f97
 </html>
