--- a/gallery.html
+++ b/gallery.html
@@ -22,8 +22,8 @@
   </nav>
 
   <main class="container">
-    <h1 class="glass">স্মৃতির গ্যালারি</h1>
-    <div class="sorry-inline" aria-hidden="true">SORRY</div>
+    <h1 class="glass">পাখির গ্যালারি</h1>
+    <div class="sorry-inline" aria-hidden="true">১৪৩</div>
     <div class="masonry">
       <div class="tile"><img src="prapti-profile.jpg" alt="প্রাপ্তি" loading="lazy"/></div>
       <div class="tile tall"><img src="prapti-bg.jpg" alt="প্রাপ্তি" loading="lazy"/></div>
@@ -31,7 +31,7 @@
       <div class="tile wide"><img src="prapti-bg.jpg" alt="প্রাপ্তি" loading="lazy"/></div>
       <div class="tile">
         <!-- Local HTML5 video for better autoplay/loop control -->
-        <video id="gallery-hero-video" playsinline autoplay loop muted preload="auto" poster="prapti-bg.jpg" style="width:100%; height:auto; display:block; aspect-ratio: 16/9;">
+        <video id="gallery-hero-video" playsinline autoplay loop preload="auto" poster="prapti-bg.jpg" style="width:100%; height:auto; display:block; aspect-ratio: 16/9;">
           <source src="p/v1.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
